# a11y-agent-bridge

./: ARCHITECTURE.md  Cargo.toml  README.md
crates/accessibility_mcp/: Cargo.toml
crates/accessibility_mcp/examples/: egui_app.rs  test_provider.rs
crates/accessibility_mcp/src/: lib.rs  protocol.rs  server.rs
crates/accessibility_mcp/src/platform/: macos.rs
crates/accessibility_mcp/tests/: integration_test.rs
crates/dioxus_app/: Cargo.toml  README.md
crates/dioxus_app/src/: main.rs
crates/egui_app/: Cargo.toml  README.md
crates/egui_app/src/: main.rs
crates/egui_app/tests/: README.md  accesskit_integration_test.rs
examples/: egui_app.rs  minimal_server.rs  simple_server.rs  test_client.rs
src/: lib.rs  protocol.rs  server.rs
src/platform/: macos.rs  mod.rs
