[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Accessibility MCP Contributors"]

[workspace.dependencies]
accessibility_mcp = { path = "crates/accessibility_mcp" }
tokio = { version = "1.40", features = ["rt", "sync", "time", "io-std", "io-util", "macros", "net"] }
anyhow = "1.0"
