[package]
name = "egui_app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
a11y_mcp = ["dep:accessibility_mcp", "dep:tokio"]

[dependencies]
eframe.workspace = true
egui.workspace = true

# Optional dependencies - only included when a11y_mcp feature is enabled
accessibility_mcp = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[[bin]]
name = "egui_app"
path = "src/main.rs"
