[package]
name = "egui_app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
a11y_mcp = ["dep:accessibility_mcp"]

[dependencies]
eframe = "0.29"
egui = "0.29"

# Optional dependencies - only included when a11y_mcp feature is enabled
accessibility_mcp = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1.0"
serial_test = "3.0"

[[bin]]
name = "egui_app"
path = "src/main.rs"
